# whatsapp-agent-framework

./: README.md  pyproject.toml
examples/agente_vendas/: .env.example  main.py  requirements.txt
tests/: test_debouncer.py  test_webhook.py
whatsapp_agent_ipnet/: __init__.py  agent.py  config.py  debouncer.py  evolution.py  webhook.py
whatsapp_agent_ipnet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
whatsapp_agent_ipnet/cli/: deploy.py  main.py  scaffold.py  setup.py
whatsapp_agent_ipnet/memory/: __init__.py  history.py  session.py
whatsapp_agent_ipnet/templates/: Dockerfile.tmpl  cloud-run-service.yaml.tmpl
